--- a/app/assets/javascripts/views/media_resources/edit/departments/subdepartments.tmpl.haml
+++ b/app/assets/javascripts/views/media_resources/edit/departments/subdepartments.tmpl.haml
@@ -1,4 +1,4 @@
 %span.ui-navigator
-  %span.arrow.small
+  %span.arrow.small.icon-arrow
   %span.ui-navigator-text
     Vertiefung wählen: ${children}
