--- a/app/assets/javascripts/views/meta_data/by_type/people/person.tmpl.haml
+++ b/app/assets/javascripts/views/meta_data/by_type/people/person.tmpl.haml
@@ -1,2 +1,3 @@
 %a.ui-tag-button.person-tag{:href => "/media_resources?search=${App.MetaDatumPeople.formattedValue($item.data)}"}
+  %i.icon-user-mini.ui-tag-icon
   ${App.MetaDatumPeople.formattedValue($item.data)}
