--- a/app/assets/stylesheets/combos/_ui-clipboard.sass
+++ b/app/assets/stylesheets/combos/_ui-clipboard.sass
@@ -41,7 +41,7 @@
 
 .ui-clipboard-resources-list
   +max-dimension(auto, 125px)
-  margin: $space-s 0
+  margin: $space-s 0 !important
   overflow: auto
 
 .ui-clipboard-alert
