--- a/app/assets/stylesheets/combos/_ui-footer.sass
+++ b/app/assets/stylesheets/combos/_ui-footer.sass
@@ -33,3 +33,9 @@
   top: 13px
   line-height: 0
   margin-right: $space-s
+
+.ui-footer-version
+  @include position-top-left( -($space-m + $space-x) ,$space-s)
+  font-size: $font-xs !important
+  color: $mono-mid !important
+  text-shadow: none
