--- a/app/assets/stylesheets/combos/_ui-media-overview.sass
+++ b/app/assets/stylesheets/combos/_ui-media-overview.sass
@@ -10,7 +10,7 @@
 .ui-media-overview-metadata,
 .ui-media-overview-preview
   display: table-cell
-  vertical-align: middle
+  vertical-align: top
   width: 50%
 
 .ui-media-overview-metadata .media-data-content
