--- a/app/assets/stylesheets/combos/_ui-resources-grid.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-grid.sass
@@ -6,10 +6,10 @@
  * Styleguide 7.9.1
 
 .ui-resources.grid
+  margin: -15px 0 0 -15px
   .ui-resource
     +float-left
     display: inline-block
-    margin: -5px $space-x $space-s -5px
   .ui-resource-title,
   .ui-resource-actions,
   .ui-resource-meta,
@@ -33,6 +33,12 @@
   .ui-thumbnail-meta
     display: block
     margin: 10px 0 0
+
+  // Some nasty layouting adjustments
+  .ui-resources-page
+    margin: 5px 0 0 5px
+  .ui-resources-page-items
+    margin-left: -5px
 
 /*
  * Show permissions
