--- a/app/assets/stylesheets/combos/_ui-resources-miniature.sass
+++ b/app/assets/stylesheets/combos/_ui-resources-miniature.sass
@@ -6,10 +6,10 @@
  * Styleguide 7.9.2
 
 .ui-resources.miniature
+  margin: -15px 0 0 -10px
   .ui-resource
     +float-left
     display: inline-block
-    margin: 0 $space-x $space-s
   .ui-resource-title,
   .ui-resource-actions,
   .ui-resource-meta,
@@ -75,6 +75,13 @@
   .ui-thumbnail-meta,
   .ui-thumbnail-actions
     display: none
+
+  // Some nasty layouting adjustments
+  .ui-resources-page
+    margin: 5px 0 0 0
+  .ui-resources-page-items
+    margin-left: 0
+    margin-top: 10px
 
 /*
  * Active Mode
