--- a/app/assets/stylesheets/combos/_ui-search-form.sass
+++ b/app/assets/stylesheets/combos/_ui-search-form.sass
@@ -9,4 +9,4 @@
   background: $mono-brightest
   border: 1px solid $mono-light
   margin: 150px auto
-  padding: $space-m $space-l 0
+  padding: $space-m $space-l
