--- a/app/assets/stylesheets/combos/_ui-summary-table.sass
+++ b/app/assets/stylesheets/combos/_ui-summary-table.sass
@@ -4,10 +4,10 @@
  * Styleguide 7.5
 
 .ui-summary-table
-  max-width: 1000px
 
 .ui-summary-label
   @extend .title-xs-alt
+  line-height: $line-height-l
   padding-right: $space-m
 
 .ui-summary-content.title-l
