--- a/app/assets/stylesheets/combos/_ui-toolbar.sass
+++ b/app/assets/stylesheets/combos/_ui-toolbar.sass
@@ -13,7 +13,7 @@
 
 .ui-toolbar .ui-toolbar-header
   font-size: $font-m
-  line-height: $line-height-s-alt
+  line-height: $line-height-m
 
 .ui-toolbar .ui-dropdown
   float: right
