--- a/app/assets/stylesheets/components/_ui-alerts.sass
+++ b/app/assets/stylesheets/components/_ui-alerts.sass
@@ -9,10 +9,12 @@
  * Styleguide 6.7
 
 .ui-alerts
+  position: relative
+  z-index: 300
 
 .ui-alert
   background: $mono-bright
-  padding: $space-x
+  padding: $space-s
   font-weight: 600
   text-align: center
 
