--- a/app/assets/stylesheets/components/_ui-slider.sass
+++ b/app/assets/stylesheets/components/_ui-slider.sass
@@ -33,7 +33,7 @@
   color: $mono-brightest
   display: block
   font-size: $font-xs
-  line-height: $line-height-xs
+  line-height: 1
   margin-left: -$space-l
   padding: $space-x
 
