--- a/app/assets/stylesheets/components/_ui-thumb.sass
+++ b/app/assets/stylesheets/components/_ui-thumb.sass
@@ -37,7 +37,7 @@
     height: 34px
     overflow: hidden
   .ui-thumbnail-meta-title
-    line-height: $line-height-s-alt
+    line-height: $line-height-s
     padding-top: $space-x
   .ui-thumbnail-actions
     display: none
