--- a/app/assets/stylesheets/general/_forms.sass
+++ b/app/assets/stylesheets/general/_forms.sass
@@ -13,7 +13,7 @@ textarea
   font-size: $font-m
   font-family: $default-font-family
   font-weight: 400
-  line-height: $line-height-s
+  line-height: $line-height-xs
   margin-bottom: $space-s
   padding: $space-x
 
