--- a/app/assets/stylesheets/general/_icons.sass
+++ b/app/assets/stylesheets/general/_icons.sass
@@ -1,3 +1,16 @@
+.icon-extend
+  font-family: 'madek-icon-font'
+  speak: none
+  font-style: normal
+  font-weight: normal
+  font-variant: normal
+  text-transform: none
+  line-height: 1
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
+
 [class*="icon-"]
   font-size: 16px
 
@@ -7,8 +20,8 @@
 [class*="icon-"].mid
   color: $mono-mid
 
-[class*="icon-"].green
-  color: $green
+[class*="icon-"].branded
+  color: $main-color
 
 [class*="icon-"].small
   font-size: 12px
