--- a/app/assets/stylesheets/general/_typography.sass
+++ b/app/assets/stylesheets/general/_typography.sass
@@ -37,11 +37,11 @@ h1, h2, h3, h4, h5, h6
 
 .title-xxl
   font-size: $font-h
-  line-height: $line-height-s
+  line-height: $line-height-xs
 
 .title-xl
   font-size: $font-xxl
-  line-height: $line-height-s
+  line-height: $line-height-xs
 
 .title-l
   font-size: $font-xl
@@ -75,7 +75,7 @@ h1, h2, h3, h4, h5, h6
 .small-print
   color: $mono-mid
   font-size: $font-xs
-  line-height: $line-height-l
+  line-height: $line-height-s
 
 .capitilize
   text-transform: capitalize
@@ -100,7 +100,7 @@ p
 
 .paragraph-s
   font-size: $font-s
-  line-height: $line-height-s
+  line-height: $line-height-xs
 
 /**
  * ## Unordered lists `ul`
