--- a/app/assets/stylesheets/layout/_layout-responsive.sass
+++ b/app/assets/stylesheets/layout/_layout-responsive.sass
@@ -7,7 +7,7 @@
   .ui-header-brand-name,
   .ui-header-instance-name
     display: block
-    line-height: $line-height-xs
+    line-height: 1
   .ui-header-instance-name
     $font-size: $font-xs
   .ui-header-logo
