--- a/app/views/application/_footer.html.haml
+++ b/app/views/application/_footer.html.haml
@@ -12,5 +12,11 @@
         %i.icon-madek.ui-footer-logo
       Z&uuml;rcher Hochschule der K&uuml;nste and contributors
 
+    / / TODO: THOMAS
+    / %p.ui-footer-version
+    /   Last deployment: 
+    /   %a.weak
+    /     Fri, 22 Nov 2013
+
 - if clipboard
   = render "application/clipboard" unless current_user.is_guest?
