--- a/app/views/filter_sets/_tabs.html.haml
+++ b/app/views/filter_sets/_tabs.html.haml
@@ -1,6 +1,6 @@
 %ul.ui-tabs.large
 
-  %li.ui-tabs-item{:class => media_set_show_page? ? "active" : ""}
+  %li.ui-tabs-item.active{:class => media_set_show_page? ? "active" : ""}
     %a{:href => media_set_path(@filter_set)} 
       = _("Filter set")
 
