--- a/app/views/filter_sets/actions/_edit_filter.html.haml
+++ b/app/views/filter_sets/actions/_edit_filter.html.haml
@@ -2,3 +2,4 @@
   %a{:href => edit_filter_set_path(@filter_set, @filter_set[:settings][:filter])}
     %i.icon-filter.mid
     = _("Change filter settings")
+%li.separator
