--- a/app/views/media_resources/_group-resources.html.haml
+++ b/app/views/media_resources/_group-resources.html.haml
@@ -9,8 +9,7 @@
       .app-body-content
         .ui-toolbar.inverted.ui-container.pax.rounded-top
           %h2.ui-toolbar-header
-            %strong Set enthält
-            (3 von 11 für Sie sichtbar)
+            Set enthält (3 von 11 für Sie sichtbar)
           .ui-toolbar-controls.by-right
             .button-group.tertiary.small.right.mls
               %a.button.active
