--- a/app/views/styleguide/6 Icons/_icons.html
+++ b/app/views/styleguide/6 Icons/_icons.html
@@ -20,9 +20,9 @@
           Grey variation
         </li>
         <li>
-          <strong>.green</strong>
+          <strong>.branded</strong>
           -
-          Green variation
+          Branded variation
         </li>
       </ul>
       <p>Arrow icons come also with small size variation:</p>
@@ -62,17 +62,17 @@
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
-        <span class="sg-modifier-name">.green</span>
+        <span class="sg-modifier-name">.branded</span>
         <div style="">
-          <i class="icon-arrow-up green"></i>
-          <i class="icon-arrow-right green"></i>
-          <i class="icon-arrow-down green"></i>
-          <i class="icon-arrow-left green"></i>
+          <i class="icon-arrow-up branded"></i>
+          <i class="icon-arrow-right branded"></i>
+          <i class="icon-arrow-down branded"></i>
+          <i class="icon-arrow-left branded"></i>
         </div>
       </div>
     </div>
     <div class="sg-description">
-      <p>Arrow icons come also with small size variation. These modifier classes can be combined, hence following cominations are possible: <code>.icon-arrow-up.small.green</code>.</p>
+      <p>Arrow icons come also with small size variation. These modifier classes can be combined, hence following cominations are possible: <code>.icon-arrow-up.small.branded</code>.</p>
       <ul class="sg-modifiers">
         <li>
           <strong>.small</strong>
@@ -114,9 +114,9 @@
           Grey variation
         </li>
         <li>
-          <strong>.green</strong>
+          <strong>.branded</strong>
           -
-          Green variation
+          Branded variation
         </li>
       </ul>
     </div>
@@ -151,13 +151,13 @@
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
-        <span class="sg-modifier-name">.green</span>
+        <span class="sg-modifier-name">.branded</span>
         <div style="">
-          <i class="icon-privacy-open green"></i>
-          <i class="icon-privacy-private green"></i>
-          <i class="icon-privacy-private-alt green"></i>
-          <i class="icon-privacy-group green"></i>
-          <i class="icon-privacy-group-alt green"></i>
+          <i class="icon-privacy-open branded"></i>
+          <i class="icon-privacy-private branded"></i>
+          <i class="icon-privacy-private-alt branded"></i>
+          <i class="icon-privacy-group branded"></i>
+          <i class="icon-privacy-group-alt branded"></i>
         </div>
       </div>
     </div>
@@ -183,9 +183,9 @@
           Grey variation
         </li>
         <li>
-          <strong>.green</strong>
+          <strong>.branded</strong>
           -
-          Green variation
+          Branded variation
         </li>
       </ul>
     </div>
@@ -217,12 +217,12 @@
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
-        <span class="sg-modifier-name">.green</span>
+        <span class="sg-modifier-name">.branded</span>
         <div style="">
-          <i class="icon-vis-list green"></i>
-          <i class="icon-vis-graph green"></i>
-          <i class="icon-vis-miniature green"></i>
-          <i class="icon-vis-grid green"></i>
+          <i class="icon-vis-list branded"></i>
+          <i class="icon-vis-graph branded"></i>
+          <i class="icon-vis-miniature branded"></i>
+          <i class="icon-vis-grid branded"></i>
         </div>
       </div>
     </div>
@@ -249,9 +249,9 @@
           Grey variation
         </li>
         <li>
-          <strong>.green</strong>
+          <strong>.branded</strong>
           -
-          Green variation
+          Branded variation
         </li>
       </ul>
     </div>
@@ -291,6 +291,8 @@
           <i class="icon-bang"></i>
           <i class="icon-close"></i>
           <i class="icon-copy"></i>
+          <i class="icon-contrast"></i>
+          <i class="icon-undo"></i>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
@@ -329,6 +331,8 @@
           <i class="icon-bang bright"></i>
           <i class="icon-close bright"></i>
           <i class="icon-copy bright"></i>
+          <i class="icon-contrast bright"></i>
+          <i class="icon-undo bright"></i>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
@@ -367,44 +371,48 @@
           <i class="icon-bang mid"></i>
           <i class="icon-close mid"></i>
           <i class="icon-copy mid"></i>
+          <i class="icon-contrast mid"></i>
+          <i class="icon-undo mid"></i>
         </div>
       </div>
       <div class="align-left bg-light sg-canvas sg-modifier">
-        <span class="sg-modifier-name">.green</span>
+        <span class="sg-modifier-name">.branded</span>
         <div style="">
-          <i class="icon-madek green"></i>
-          <i class="icon-pen green"></i>
-          <i class="icon-cog green"></i>
-          <i class="icon-filter green"></i>
-          <i class="icon-plus green"></i>
-          <i class="icon-plus-small green"></i>
-          <i class="icon-upload green"></i>
-          <i class="icon-dload green"></i>
-          <i class="icon-checkmark green"></i>
-          <i class="icon-lock green"></i>
-          <i class="icon-eye green"></i>
-          <i class="icon-move green"></i>
-          <i class="icon-cover green"></i>
-          <i class="icon-set green"></i>
-          <i class="icon-media-entry green"></i>
-          <i class="icon-tag green"></i>
-          <i class="icon-trash green"></i>
-          <i class="icon-user green"></i>
-          <i class="icon-add-user green"></i>
-          <i class="icon-add-group green"></i>
-          <i class="icon-admin green"></i>
-          <i class="icon-home green"></i>
-          <i class="icon-power-off green"></i>
-          <i class="icon-lens green"></i>
-          <i class="icon-magnifier green"></i>
-          <i class="icon-highlight green"></i>
-          <i class="icon-star green"></i>
-          <i class="icon-clipboard green"></i>
-          <i class="icon-question-mark green"></i>
-          <i class="icon-question green"></i>
-          <i class="icon-bang green"></i>
-          <i class="icon-close green"></i>
-          <i class="icon-copy green"></i>
+          <i class="icon-madek branded"></i>
+          <i class="icon-pen branded"></i>
+          <i class="icon-cog branded"></i>
+          <i class="icon-filter branded"></i>
+          <i class="icon-plus branded"></i>
+          <i class="icon-plus-small branded"></i>
+          <i class="icon-upload branded"></i>
+          <i class="icon-dload branded"></i>
+          <i class="icon-checkmark branded"></i>
+          <i class="icon-lock branded"></i>
+          <i class="icon-eye branded"></i>
+          <i class="icon-move branded"></i>
+          <i class="icon-cover branded"></i>
+          <i class="icon-set branded"></i>
+          <i class="icon-media-entry branded"></i>
+          <i class="icon-tag branded"></i>
+          <i class="icon-trash branded"></i>
+          <i class="icon-user branded"></i>
+          <i class="icon-add-user branded"></i>
+          <i class="icon-add-group branded"></i>
+          <i class="icon-admin branded"></i>
+          <i class="icon-home branded"></i>
+          <i class="icon-power-off branded"></i>
+          <i class="icon-lens branded"></i>
+          <i class="icon-magnifier branded"></i>
+          <i class="icon-highlight branded"></i>
+          <i class="icon-star branded"></i>
+          <i class="icon-clipboard branded"></i>
+          <i class="icon-question-mark branded"></i>
+          <i class="icon-question branded"></i>
+          <i class="icon-bang branded"></i>
+          <i class="icon-close branded"></i>
+          <i class="icon-copy branded"></i>
+          <i class="icon-contrast branded"></i>
+          <i class="icon-undo branded"></i>
         </div>
       </div>
     </div>
@@ -497,6 +505,26 @@
         <div style="">
           <i class="icon-nav-help dark"></i>
           <i class="icon-nav-search dark"></i>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="sg-example" id="5.7">
+    <h3>
+      <a href="#5.6">5.7</a>
+    </h3>
+    <div class="sg-description">
+      <span class="sg-filename">_icons.scss</span>
+      <h2>Mini icons <code>.icon-</code></h2>
+      <p>Destined to live within only tag cloud buttons, mini icons are small variations on some of the above icons that need to use another character and grid size to be perfectly crips.</p>
+    </div>
+    <div class="sg-canvases">
+      <div class="align-left bg-light sg-canvas">
+        <div style="">
+          <i class="icon-group-mini"></i>
+          <i class="icon-user-mini"></i>
+          <i class="icon-tag-mini"></i>
         </div>
       </div>
     </div>
