--- a/app/views/styleguide/7 Components/_components.html
+++ b/app/views/styleguide/7 Components/_components.html
@@ -177,17 +177,20 @@
       </ul>
     </div>
     <div class="sg-canvases">
-      <div class="align-left bg-light sg-canvas">
+      <div class="align-left bg-light sg-canvas sg-modifier">
         <div style="">
-          <ul class="ui-tag-cloud $modifier-class">
+          <ul class="ui-tag-cloud">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 1 <span class="ui-tag-counter">5</span></a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Kunst <span class="ui-tag-counter">34</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 2</a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">34</span></a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 3 <span class="ui-tag-counter">237</span></a>
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Design <span class="ui-tag-counter">34</span></a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Fotografie <span class="ui-tag-counter">34</span></a>
             </li>
           </ul>
         </div>
@@ -197,13 +200,16 @@
         <div style="">
           <ul class="ui-tag-cloud small">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 1 <span class="ui-tag-counter">5</span></a>
+              <a href="#" class="ui-tag-button">Kunst</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 2</a>
+              <a href="#" class="ui-tag-button">Fotografie</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 3 <span class="ui-tag-counter">237</span></a>
+              <a href="#" class="ui-tag-button">Design</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button">Fotografie</a>
             </li>
           </ul>
         </div>
@@ -213,13 +219,145 @@
         <div style="">
           <ul class="ui-tag-cloud large">
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 1 <span class="ui-tag-counter">5</span></a>
+              <a href="#" class="ui-tag-button">Kunst</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 2</a>
+              <a href="#" class="ui-tag-button">Fotografie</a>
             </li>
             <li class="ui-tag-cloud-item">
-              <a href="#" class="ui-tag-button">Tag 3 <span class="ui-tag-counter">237</span></a>
+              <a href="#" class="ui-tag-button">Design</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button">Fotografie</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas">
+        <div style="">
+          <ul class="ui-tag-cloud">
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Freizeit</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Mode</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Outdoor</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Sport</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Natur</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Mode</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Outdoor</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Sport</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button"><i class="icon-tag-mini ui-tag-icon"></i> Natur</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas sg-modifier">
+        <div style="">
+          <ul class="ui-tag-cloud">
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-user-mini ui-tag-icon"></i> Name, Surname</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas sg-modifier">
+        <div style="">
+          <ul class="ui-tag-cloud">
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 1</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 2</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 3</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 4</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 5</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas sg-modifier">
+        <div style="">
+          <ul class="ui-tag-cloud">
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 1</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 2</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 3</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 4</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 5</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="align-left bg-light sg-canvas sg-modifier">
+        <div style="">
+          <ul class="ui-tag-cloud">
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 1</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 2</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 3</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 4</a>
+            </li>
+            <li class="ui-tag-cloud-item">
+              <a href="#" class="ui-tag-button person-tag"><i class="icon-group-mini ui-tag-icon"></i> Group 5</a>
             </li>
           </ul>
         </div>
@@ -962,7 +1100,6 @@
       </div>
     </div>
   </section>
-</section>
   <section class="sg-example" id="6.17">
     <h3>
       <a href="#6.17">6.17</a>
@@ -1287,6 +1424,7 @@
           </div>
         </div>
       </div>
+    </div>
   </section>
 
   <section class="sg-example" id="6.20">
