--- a/app/assets/javascripts/views/meta_data/by_type/keywords/keyword.tmpl.haml
+++ b/app/assets/javascripts/views/meta_data/by_type/keywords/keyword.tmpl.haml
@@ -1,3 +1,4 @@
 %li.ui-tag-cloud-item
   %a.ui-tag-button{:href => "/media_resources?meta_data[keywords][ids][]=${$item.data.id}"}
+    %i.icon-tag-mini.ui-tag-icon
     ${$item.data.label}
