--- a/app/assets/stylesheets/components/_multi-select.sass
+++ b/app/assets/stylesheets/components/_multi-select.sass
@@ -15,18 +15,20 @@
   .multi-select-tag
     @extend .ui-tag-button
     cursor: default
-    padding-left: 4px
-    padding-right: 4px
+    padding-left: $space-s
+    padding-right: $space-s
     width: auto
   .tab-pane
     max-height: 350px
     overflow-y: auto
 
 .multi-select-tag-remove
-  @extend .icon-trash.mini !optional
-  opacity: $opacity-medium
+  display: inline-block
+  color: $mono-mid
+  margin-left: $space-x
   &:hover
-    opacity: 1.0
+    color: $mono-dark
+    text-decoration: none
 
 .multi-select-input-holder
   +position
