--- a/app/assets/stylesheets/components/_ui-metadata-box.sass
+++ b/app/assets/stylesheets/components/_ui-metadata-box.sass
@@ -21,9 +21,10 @@
  * Styleguide 6.14
 
 .ui-metadata-box .media-data-title
+  margin-bottom: $space-x
 
 .ui-metadata-box .media-data-content
-  line-height: $line-height-m
-  margin-bottom: $space-s
+  line-height: $line-height-s
+  margin-bottom: $space-m
   &:last-child
     margin-bottom: 0
