--- a/app/views/explore/index.html.haml
+++ b/app/views/explore/index.html.haml
@@ -17,7 +17,7 @@
 
         = render :partial => "application/sidebar/explore"
 
-        .app-body-content.table-cell.table-substance.ui-container
+        .app-body-content.table-cell.table-substance.ui-container.context-fix
 
           = render "application/collage" if @splashscreen_set and not @splashscreen_set.included_resources_accessible_by_user(current_user,:view).empty?
 
