--- a/app/views/media_entries/_objective_meta_data.html.haml
+++ b/app/views/media_entries/_objective_meta_data.html.haml
@@ -1,6 +1,6 @@
-%h3.title-l.separated.mbl
+%h3.title-l.separated.mbm
   = _("File")
-%table.borderless
+%table.block.mbl
   %tbody
     - @objective_meta_data.each do |meta_datum|
       %tr
