--- a/app/views/media_entries/parents.html.haml
+++ b/app/views/media_entries/parents.html.haml
@@ -1,5 +1,5 @@
 - content_for :content do
-  .bright.ui-container.pal.rounded-bottom
+  .bright.ui-container.pal.rounded-bottom.context-parents
 
     %h2.title-l.separated.mbl
       = n_("This entry is contained in one set", "This entry is contained in %d sets" % @parents.count, @parents.count)
