--- a/app/views/media_resources/_actions.html.haml
+++ b/app/views/media_resources/_actions.html.haml
@@ -21,6 +21,7 @@
         %a.ui-thumbnail-action-edit{:title => _("Edit metadata"), :href => edit_media_resource_path(media_resource)}
           %i.icon-pen
     - if current_user.authorized?(:delete, media_resource)
+      %li.separator
       %li.ui-thumbnail-action
         %a.ui-thumbnail-action-delete{:"data-delete-action" => true, :title => _("Delete")}
           %i.icon-trash
