--- a/app/views/media_resources/edit/fields/_meta_datum_keywords.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_keywords.html.haml
@@ -9,7 +9,7 @@
           %input{:name => "resource[meta_data_attributes][#{@i}][value][]", :type => "hidden", :value => value.meta_term_id}
           = value
           %a.multi-select-tag-remove
-            .icon-remove
+            .icon-remove.icon-close.small
 
     %li.multi-select-input-holder.mbs
       %input.multi-select-input.form-autocomplete-keywords{:id => "resource[meta_data_attributes][#{@i}][value]", :type => "text"}
