--- a/app/views/meta_data/_keywords.html.haml
+++ b/app/views/meta_data/_keywords.html.haml
@@ -1,5 +1,7 @@
 - if keywords.any?
-  .ui-tag-cloud.small
+  %ul.ui-tag-cloud.small
     - keywords.each do |keyword|
       %li.ui-tag-cloud-item
-        = link_to keyword, media_resources_path(:meta_data => {:keywords => {:ids => [keyword.meta_term.id]}}), :class => "ui-tag-button"
+        = link_to(media_resources_path(:meta_data => {:keywords => {:ids => [keyword.meta_term.id]}}), :class => "ui-tag-button") do
+          %i.icon-tag-mini.ui-tag-icon
+          = keyword
