--- a/app/views/meta_data/_people.html.haml
+++ b/app/views/meta_data/_people.html.haml
@@ -1,4 +1,5 @@
-.ui-tag-cloud.small
+%ul.ui-tag-cloud.small
   - people.each do |person|
     %a.ui-tag-button.person-tag{:href => media_resources_path(:search => person.fullname)}
+      %i.icon-user-mini.ui-tag-icon
       = person
