--- a/app/views/my/entrusted_media_resources.html.haml
+++ b/app/views/my/entrusted_media_resources.html.haml
@@ -37,7 +37,7 @@
 
           = render :partial => "media_resources/list/filterbar"
 
-          .ui-resources-holder
+          .ui-resources-holder.context-fix
 
             .ui-container.table.auto
 
